--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==3.0.0
-opencv-python==4.8.1.78
-numpy==1.26.0
-Werkzeug==3.0.1
+Flask==2.3.3
+opencv-python-headless==4.8.1.78
+numpy==1.24.3
+Werkzeug==2.3.7
+gunicorn==21.2.0
