--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Flask==3.0.0
-opencv-python-headless==4.9.0.80
-numpy==2.0.0
-Werkzeug==3.0.1
+Flask==2.3.3
+numpy==1.24.3
+Pillow==10.0.1
+Werkzeug==2.3.7
